syntax = "proto3";

package candle;

option go_package = "github.com/yitech/candles/model/protobuf";

// Candle represents a single OHLCV candlestick.
message Candle {
  string exchange   = 1;
  string symbol     = 2;
  string interval   = 3;
  int64  open_time  = 4;
  string open       = 5;
  string high       = 6;
  string low        = 7;
  string close      = 8;
  string volume     = 9;
  int64  close_time = 10;
  bool   is_closed  = 11;
}

// SubscribeRequest specifies which market to stream candles from.
message SubscribeRequest {
  string exchange = 1;
  string symbol   = 2;
  string interval = 3;
}

// CandleService streams real-time candlestick data from exchanges.
service CandleService {
  // Subscribe opens a server-side streaming RPC that pushes candles
  // as they arrive from the requested exchange/symbol/interval.
  rpc Subscribe(SubscribeRequest) returns (stream Candle);
}
